--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 Neo4j-BACKEND/api/__pycache__/movielens-app.cpython-310.pyc
 Neo4j-BACKEND/api/__pycache__/movielens-app.cpython-310.pyc
+api/__pycache__/movielens-app.cpython-310.pyc
+*.pyc
