--- a/import/Dockerfile
+++ b/import/Dockerfile
@@ -1,11 +1,11 @@
-# Use an official Python runtime as a parent image
-FROM python:3.10
+# syntax=docker/dockerfile:1.4
+FROM --platform=$BUILDPLATFORM python:3.10-alpine AS builder
 
 # Set the working directory to /app
-WORKDIR /app
+WORKDIR /import
 
 # Copy the current directory contents into the container at /app
-ADD . /app
+ADD . /import
 
 # Install any needed packages specified in requirements.txt
 RUN pip install -r requirements.txt
